# filegraph-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
eval/: deepswe-mini.yaml  deepswe.yaml
examples/: simple_run.py
src/filegraph_agents/: __init__.py  actor.py  cli.py  config.py  errors.py  llm.py  mailbox.py  observer.py  prompts.py  runtime.py  ui.py  workspace.py
src/filegraph_agents/integrations/: __init__.py  pier.py
tests/: test_agent_permissions.py  test_context_compaction.py  test_context_window.py  test_parallel_limit.py  test_parallel_talk.py  test_reentrant_talk.py  test_single_context.py  test_workspace.py
