[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "filegraph-agents"
version = "0.1.1"
description = "FileGraph Agents v0: actor-style file agents for software engineering tasks"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "FileGraph Agents" }]
keywords = ["agents", "swe", "actor", "multi-agent", "code"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = ["litellm>=1.60", "python-dotenv>=1.2.2", "rich>=15.0.0"]

[project.scripts]
fga = "filegraph_agents.cli:main"
